--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,78 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+  background-color: #fff;
+  border-bottom: 1px solid lightgrey;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 2;
+  -webkit-transition: height 0.2s ease-in-out;
+  transition: height 0.2s ease-in-out;
+  height: 60px;
+}
+.nav_menu{
+  display: flex;
+  flex-direction: row;
+  height: 70px;
+  width: 70%;
+  margin: 0 auto;
+  padding: 18px 35px;
+}
+.nav_title {
+  display: block;
+  background-position: -176px 0px;
+  background-size: 405px 379px;
+  background-repeat: no-repeat;
+  height: 35px;
+  width: 176px;
+  text-indent: -1000%
+}
+.menu{
+  margin-left: auto;
+  display: flex;
+  place-items: 2px;
+}
+.menu_item{
+  color: black;
+  display: flex;
+}
+.post{
+  border-radius: 3px;
+  border: 1px solid #e6e6e6;
+  background-color: #fff;
+  margin-bottom: 40px;
+  margin-top: 80px;
+  margin-left : 20%;
+  margin-right: 20%;
+}
+.post_header{
+  display: flex;
+  padding: 16px;
+  align-items: center;
+}
+.post_avatar{
+  width: 30px;
+  height: 30px;
+}
+.post_avatar img{
+  width: 100%;
+      height: 100%;
+      border-radius: 50%;
+}
+h3{
+  margin-left: 12px;
+      font-family: 'PT Sans', sans-serif;
+      font-weight: bold;
+}
+.post_image{
+  width: 100%;
+  object-fit: contain;
+  border-top: 1px solid lightgrey;
+  border-bottom: 1px solid lightgrey;
+}
+.post_text{
+  font-weight: normal;
+  padding: 20px;
 }
